--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -64,15 +64,15 @@
       <div class="row-content">
         <label class="label text" for="department">Department</label>
         <div>
-          <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+          <input class="checkbox" type="checkbox" id="hr" name="department" value="HR">
           <label class="text" for="hr">HR</label>
-          <input type="checkbox" id="sales" name="sales" value="Sales">
+          <input type="checkbox" id="sales" name="department" value="Sales">
           <label class="text" for="sales">Sales</label>
-          <input type="checkbox" id="finance" name="finance" value="Finance">
+          <input type="checkbox" id="finance" name="department" value="Finance">
           <label class="text" for="finance">Finance</label>
-          <input type="checkbox" id="engineer" name="engineer" value="Engineer">
+          <input type="checkbox" id="engineer" name="department" value="Engineer">
           <label class="text" for="engineer">Engineer</label>
-          <input type="checkbox" id="others" name="others" value="Others">
+          <input type="checkbox" id="others" name="department" value="Others">
           <label class="text" for="others">Others</label>
         </div>
       </div>
@@ -139,6 +139,7 @@
             <option value="2017">2017</option>
           </select>
         </div>
+        <date-error class="date-error" for='day month year'></date-error> 
       </div>
       <div class="row-content">
         <label class="label text" for="notes">Notes</label>
