Added: Ability to view Employee Payroll Details in a Table Form

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -43,7 +43,7 @@
         <th>Actions</th>
       </tr>
       <tr>
-        <td><img class="profile" alt="" src="../assets/profile-images/Ellipse -2.png">
+        <td class="profile"><img alt="" src="../assets/profile-images/Ellipse -2.png">
         </td>
         <td>Madhukar Tatiraju</td>
         <td>Male</td>
