--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600
               &display=swap" rel="stylesheet">
   <title>Employee Payroll App-HomePage</title>
-  <script defer src="../js/home_page.js"></script>
 </head>
 <body>
   <header class="header-content header">
@@ -32,33 +31,12 @@
         <img src="../assets/icons/add-24px.svg" alt="add icon">Add User
       </a>
     </div>
-    <table id="display" class="table">
-      <tr>
-        <th></th>
-        <th>Name</th>
-        <th>Gender</th>
-        <th>Department</th>
-        <th>Salary</th>
-        <th>StartDate</th>
-        <th>Actions</th>
-      </tr>
-      <tr>
-        <td class="profile"><img alt="" src="../assets/profile-images/Ellipse -2.png">
-        </td>
-        <td>Madhukar Tatiraju</td>
-        <td>Male</td>
-        <td>
-          <div class="dept-label">HR</div>
-          <div class="dept-label">Finance</div>
-        </td>
-        <td>300000</td>
-        <td>1 Nov 2020</td>
-        <td>
-          <img id="1" onclick="remove(this)" alt="delete" src="../assets/icons/delete-black-18dp.svg">
-          <img id="1" alt="edit" onclick="update(this)" src="../assets/icons/create-black-18dp.svg">
-        </td>
-      </tr>
+    <table id="table-display" class="table">
     </table>
   </div>
+  <script defer src="../js/home_page.js"></script>
+  <script defer src="../js/utilities.js"></script>
+  <script defer src="../js/site_properties.js"></script>
+  <script defer src="../js/EmployeePayrollData.js"></script>
 </body>
 </html>
