--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -24,7 +24,7 @@
     </div>
   </header>
   <div class="form-content">
-    <form class="form" action="#" onsubmit="save(event);return false" onreset="resetForm()">
+    <form class="form" action="../pages/homePage.html" onsubmit="save(event);return false" onreset="resetForm()">
       <div class="form-head">Employee Payroll Form</div>
       <div class="row-content">
         <label class="label text" for="name">Name</label>
@@ -146,7 +146,7 @@
         <textarea id="notes" class="input" name="Notes" placeholder="" style="height: 100px;"></textarea>
       </div>
       <div class="buttonParent">
-        <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+        <a href="../pages/homePage.html" class="resetButton button cancelButton">Cancel</a>
         <div class="submit-reset">
           <button type="submit" class="button submitButton" id="submitButton">Submit</button>
           <button type="reset" class="resetButton button">Reset</button>
