--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -8,9 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap">
   <link rel="stylesheet" href="../css/payroll_form.css">
   <title>Employee Payroll Form</title>
-  <script defer src="../js/payroll_form.js"></script>
-  <script defer src="../js/EmployeePayrollData.js"></script>
-  
 </head>
 
 <body>
@@ -154,6 +151,10 @@
       </div>
     </form>
   </div>
+  <script defer src="../js/payroll_form.js"></script>
+  <script defer src="../js/EmployeePayrollData.js"></script>
+  <script defer src="../js/site_properties.js"></script>
+  <script defer src="../js/utilities.js"></script>
 </body>
 
 </html>
