--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -152,6 +152,7 @@
     </form>
   </div>
   <script defer src="../js/payroll_form.js"></script>
+  <script defer src="../js/home_page.js"></script>
   <script defer src="../js/EmployeePayrollData.js"></script>
   <script defer src="../js/site_properties.js"></script>
   <script defer src="../js/utilities.js"></script>
