--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -31,6 +31,7 @@
     </table>
   </div>
   <script defer src="../js/home_page.js"></script>
+  <script defer src="../js/payroll_form.js"></script>
   <script defer src="../js/utilities.js"></script>
   <script defer src="../js/site_properties.js"></script>
   <script defer src="../js/EmployeePayrollData.js"></script>
