Added: Ability to support both Local Storage and JSON Server

--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -155,6 +155,7 @@
   <script defer src="../js/home_page.js"></script>
   <script defer src="../js/site_properties.js"></script>
   <script defer src="../js/utilities.js"></script>
+  <script defer src="../js/http_services.js"></script>
 </body>
 
 </html>
