--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -34,5 +34,6 @@
   <script defer src="../js/payroll_form.js"></script>
   <script defer src="../js/utilities.js"></script>
   <script defer src="../js/site_properties.js"></script>
+  <script defer src="../js/http_services.js"></script>
 </body>
 </html>
